<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            >

            <ImageView
                android:id="@+id/image_computer"
                android:layout_centerHorizontal="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_computer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_computer"
                android:text="@string/programming"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_happy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_happy"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_happy"
                android:text="@string/anime"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/image_sunny"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sunny"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_sunny"
                android:layout_centerHorizontal="true"
                android:text="@string/code" />

        </RelativeLayout>





    </LinearLayout>

    <TextView
        android:id="@+id/hello_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_menu"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/cambay"
        android:text="@string/string_hello"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cambay"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/string_phrase"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:scrollbars = "vertical"
        android:maxLines = "10"
        />


    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/bold_color"
        android:fontFamily="@font/cambay"
        android:text="@string/button_home" />


</RelativeLayout>